# freedomtx

./: .travis.yml  CMakeLists.txt  README.md
radio/sdcard/horus/CROSSFIRE/: device.lua
radio/sdcard/horus/SCRIPTS/TOOLS/CROSSFIRE/: device.lua
radio/sdcard/tango/CROSSFIRE/: crossfire.lua  device.lua
radio/sdcard/tango/SCRIPTS/BF/: radios.lua  radios.luac
radio/sdcard/tango/SCRIPTS/BF/Tango2/: filters.luac  gpspids.luac  pid_advanced.luac  pids1.luac  pids2.luac  pwm.luac  rates.luac  rescue.luac  tango2pre.luac  vtx.luac
radio/sdcard/taranis-x7/CROSSFIRE/: device.lua
radio/sdcard/taranis-x7/SCRIPTS/TOOLS/CROSSFIRE/: device.lua
radio/sdcard/taranis-x9/CROSSFIRE/: device.lua
radio/sdcard/taranis-x9/SCRIPTS/TOOLS/CROSSFIRE/: device.lua
radio/src/: CMakeLists.txt  audio.cpp  audio.h  cli.cpp  curves.cpp  dataconstants.h  datastructs.h  debug.cpp  debug.h  functions.cpp  haptic.cpp  haptic.h  keys.cpp  keys.h  logs.cpp  main.cpp  mixer.cpp  mixer_scheduler.h  myeeprom.h  opentx.cpp  opentx.h  opentx_constants.h  rtos.h  sbus.cpp  sdcard.h  simu.cpp  stamp.cpp  switches.cpp  tasks.cpp  tasks.h  translations.cpp  translations.h
radio/src/bitmaps/: CMakeLists.txt
radio/src/bitmaps/128x96/: CMakeLists.txt
radio/src/gui/: CMakeLists.txt  gui_common.cpp  gui_common.h  screenshot.cpp
radio/src/gui/128x64/: CMakeLists.txt  gui.h  lcd.cpp  lcd.h  lcd_4bits.cpp  menu_radio.cpp  menus.h  model_crossfire_setup.cpp  model_curve_edit.cpp  model_display.cpp  model_flightmodes.cpp  model_input_edit.cpp  model_mix_edit.cpp  model_select.cpp  model_select_mambo.cpp  model_select_sd.cpp  model_select_tango.cpp  model_setup.cpp  model_special_functions.cpp  model_telemetry.cpp  popups.h  radio_calibration.cpp  radio_calibration_hall.cpp  radio_setup.cpp  splash.cpp  startup_shutdown.cpp  view_about.cpp  view_channels.cpp  view_main.cpp  view_statistics.cpp  view_telemetry.cpp  widgets.cpp
radio/src/gui/128x96/: bmp.cpp  gui.h  lcd.cpp  lcd.h  menu_model.cpp  menu_radio.cpp  menus.cpp  menus.h  model_crossfire_setup.cpp  model_curve_edit.cpp  model_display.cpp  model_failsafe.cpp  model_flightmodes.cpp  model_input_edit.cpp  model_logical_switches.cpp  model_mix_edit.cpp  model_select.cpp  model_setup.cpp  model_special_functions.cpp  model_telemetry.cpp  popups.cpp  popups.h  radio_calibration.cpp  radio_diaganas.cpp  radio_diagkeys.cpp  radio_hardware.cpp  radio_setup.cpp  radio_trainer.cpp  radio_version.cpp  splash.cpp  theme.h  view_about.cpp  view_channels.cpp  view_main.cpp  view_statistics.cpp  view_telemetry.cpp  widgets.cpp
radio/src/gui/212x64/: model_setup.cpp
radio/src/gui/480x272/: model_setup.cpp
radio/src/gui/common/stdlcd/: CMakeLists.txt  draw_functions.cpp  model_inputs.cpp  model_mixes.cpp  popups.cpp  radio_hardware.cpp  radio_sdmanager.cpp  radio_version.cpp  view_telemetry.cpp  view_text.cpp  widgets.cpp
radio/src/gui/navigation/: common.cpp  navigation_mambo.cpp  navigation_tango.cpp
radio/src/io/: frsky_sport.h  multi_firmware_update.cpp
radio/src/io/crsf/: crc8.cpp  crc8.h  crossfire.cpp  crossfire.h  crsf.cpp  crsf.h  crsf_utilities.cpp  crsf_utilities.h  crsf_write.cpp  crsf_write.h
radio/src/lua/: CMakeLists.txt  api_general.cpp  interface.cpp  lua_api.h
radio/src/pulses/: crossfire.cpp  modules.h  multi.cpp  pulses.cpp  pulses.h  pxx2.cpp  sbus.cpp
radio/src/storage/: datacopy.cpp  modelslist.cpp  modelslist.h  rambackup.cpp  rtc_backup.cpp  sdcard_raw.cpp  sdcard_raw.h  storage.h  storage_common.cpp
radio/src/storage/conversions/: CMakeLists.txt  conversions.cpp  conversions.h  conversions_101_110.cpp  datastructs_101.h  datastructs_218.h
radio/src/targets/common/arm/: CMakeLists.txt
radio/src/targets/common/arm/stm32/: CMakeLists.txt  adc_driver.cpp  aux_serial_driver.cpp  mixer_scheduler_driver.cpp  pwr_driver.cpp  rotary_encoder_driver.cpp  sdio_sd.c  serial2_driver.cpp  usb_bsp.c  usb_driver.cpp  usb_driver.h  usbd_conf.h  usbd_desc.c
radio/src/targets/common/arm/stm32/f4/: system_stm32f4xx.c
radio/src/targets/horus/: board.cpp  board.h  extmodule_driver.cpp  hal.h
radio/src/targets/mambo/: CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  hal.h  keys_driver.cpp  lcd_driver_spi.cpp
radio/src/targets/raspberrypi/: CMakeLists.txt  board.cpp  board.h
radio/src/targets/simu/: simpgmspace.cpp
radio/src/targets/sky9x/: board.h  pulses_driver.cpp
radio/src/targets/tango/: CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  diskio.cpp  esp_driver.cpp  extmodule_driver.cpp  hal.h  haptic_driver.cpp  keys_driver.cpp  lcd_driver_spi.cpp  led_driver.cpp  pulses_driver.cpp  pwr_driver.cpp  stm32f4_flash.ld  telemetry_driver.cpp
radio/src/targets/tango/bootloader/: boot_menu.cpp
radio/src/targets/taranis/: board.h  extmodule_driver.cpp  hal.h
radio/src/targets/tbs/: CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  diskio.cpp  extmodule_driver.cpp  hal.h  keys_driver.cpp  lcd_driver_spi.cpp  malloc.c  telemetry_driver.cpp  usbd_hid_agent.c
radio/src/telemetry/: crossfire.cpp  crossfire.h  frsky_sport.cpp  multi.cpp  telemetry.cpp  telemetry.h  telemetry_sensors.cpp
radio/src/translations/: en.h.txt  es.h.txt  fi.h.txt  untranslated.h
tools/: commit-tests.sh
